# nested-musig2-python

./: LICENSE  README.md  pyproject.toml
common/: hashing.py  schnorr.py
docs/: bark_nested_musig.md  protocol_walkthrough.md
examples/: musig2_3of3.py  nested_demo.py
musig2/: keyagg.py  nonce.py  sign.py
nested_musig2/: nested_sign.py  nonce_ext.py
tests/: test_hashing.py  test_keyagg.py  test_nested.py  test_nonce.py  test_nonce_ext.py  test_schnorr.py  test_setup.py  test_sign.py
