[project]
name = "musig2-nested"
version = "0.1.0"
description = "MuSig2 and Nested MuSig2 implementation"
requires-python = ">=3.10"

dependencies = [
    "secp256k1lab @ git+https://github.com/secp256k1lab/secp256k1lab.git",
]

[project.optional-dependencies]
dev = [
    "pytest",       # Test runner
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["common*", "musig2*", "nested_musig2*"]
